<resources>
    <string name="api_url">https://api.singgalanghs.id/</string>
    <string name="app_name">Stock Management</string>
    <string name="text_pair">Pair</string>
    <string name="text_list_devices">List Device</string>
    <string name="text_bluetooth_off">OFF</string>
    <string name="text_enable">Aktif</string>
    <string name="text_view_paired">Pair</string>
    <string name="text_scan_devices">Scan</string>
    <string name="text_checkout">Checkout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Masuk</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="checkout_scan">Checkout Scan</string>
    <string name="text_product_check">Cek Produk</string>
    <string name="product_scanned">Produk Terpindai</string>
    <string name="no">No</string>
    <string name="rfid">RFID</string>
    <string name="product_name">Nama Produk</string>
    <string name="status">Status</string>
    <string name="menu">Menu</string>
    <string name="menu_subtitle">Pilih fitur yang ingin anda gunakan</string>
    <string name="dashboard">Dashboard</string>
    <string name="checkout">Checkout</string>
    <string name="check_product">Cek Produk</string>
    <string name="catalog_product">Katalog Produk</string>
    <string name="repair">Perbaikan</string>
    <string name="settings">Pengaturan</string>
    <string name="product_sold">Produk Terjual</string>
    <string name="product_lost">Produk Hilang</string>
    <string name="diamond_sold">Berlian Terjual</string>
    <string name="gold_sold">Emas Terjual</string>
</resources>