<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.productcheck.ProductCheckActivity">

    <com.google.android.material.navigationrail.NavigationRailView
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:background="@color/sidebar">

    </com.google.android.material.navigationrail.NavigationRailView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Theme.StockManagement.TopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Theme.StockManagement.TopBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cek Produk" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Device: " />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_scanned"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/product_scanned"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_scanned"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow>

                            <TextView
                                android:text="@string/no"
                                android:textStyle="bold" />

                            <TextView
                                android:text="@string/rfid"
                                android:textStyle="bold" />

                            <TextView
                                android:text="@string/product_name"
                                android:textStyle="bold" />

                            <TextView
                                android:text="@string/status"
                                android:textStyle="bold" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>