<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".screen.menu.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            style="@style/Theme.StockManagement.Menu.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu" />

        <TextView
            style="@style/Theme.StockManagement.Menu.SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_subtitle" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight=".50"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".30"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <RelativeLayout
                    android:id="@+id/dashboard"
                    style="@style/Theme.StockManagement.Menu.IconContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/dashboard"
                        android:src="@drawable/ic_dashboard_48" />
                </RelativeLayout>

                <TextView
                    style="@style/Theme.StockManagement.Menu.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".30"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <RelativeLayout
                    android:id="@+id/checkout"
                    style="@style/Theme.StockManagement.Menu.IconContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/checkout"
                        android:src="@drawable/ic_checkout_48" />
                </RelativeLayout>

                <TextView
                    style="@style/Theme.StockManagement.Menu.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".30"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <RelativeLayout
                    android:id="@+id/check_product"
                    style="@style/Theme.StockManagement.Menu.IconContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/check_product"
                        android:src="@drawable/ic_check_product_48" />
                </RelativeLayout>

                <TextView
                    style="@style/Theme.StockManagement.Menu.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_product" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight=".50"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".30"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <RelativeLayout
                    android:id="@+id/catalog_product"
                    style="@style/Theme.StockManagement.Menu.IconContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/catalog_product"
                        android:src="@drawable/ic_catalog_product_48" />
                </RelativeLayout>

                <TextView
                    style="@style/Theme.StockManagement.Menu.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catalog_product" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".30"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <RelativeLayout
                    android:id="@+id/repair"
                    style="@style/Theme.StockManagement.Menu.IconContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/repair"
                        android:src="@drawable/ic_repair_48" />
                </RelativeLayout>

                <TextView
                    style="@style/Theme.StockManagement.Menu.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repair" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".30"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <RelativeLayout
                    android:id="@+id/settings"
                    style="@style/Theme.StockManagement.Menu.IconContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/settings"
                        android:src="@drawable/ic_settings_48" />
                </RelativeLayout>

                <TextView
                    style="@style/Theme.StockManagement.Menu.ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>